istio/destination-rule/destination-rule-precio-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  creationTimestamp: null
  name: precio
spec:
  host: precio
  subsets:
  - labels:
      version: virtualized
    name: version-virtualized
  - labels:
      version: v1
    name: version-v1
