istio/destination-rule/destination-rule-precio_lb_policy_app.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
      name: precio
spec:
  host: precio
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
